syntax = "proto3";

package niwrad.rpc;

option csharp_namespace = "Net.Rpc";
option go_package = "rpc;rpc";

enum CreateMatchCompletionResult {
	createMatchCompletionResultUnknownInternalFailure        = 0;
	createMatchCompletionResultSucceeded                     = 1;
	createMatchCompletionResultUnknownClientFailure          = -100;
	createMatchCompletionResultAlreadyInMatchOfSpecifiedType = -99;
	createMatchCompletionResultAlreadyCreatingMatch          = -98;
	createMatchCompletionResultAlreadyInMatch                = -97;
	createMatchCompletionResultFailedToCreateMucRoom         = -96;
	createMatchCompletionResultNoResponse                    = -95;
	createMatchCompletionResultLoggedOut                     = -94;
}
message CreateMatchRequest {
	string match_type = 1;
	int64 seed = 2;
    MatchConfiguration configuration = 3;
}

message CreateMatchResponse {
    string match_id = 1;
    CreateMatchCompletionResult result = 2;
}

message MatchConfiguration {
	int32 terrain_size = 1;
	int32 initial_animals = 2;
	int32 initial_plants = 3;
}

message RunServerRequest {
	MatchConfiguration configuration = 1;
}
enum RunServerCompletionResult {
	runServerCompletionResultUnknownInternalFailure        = 0;
	runServerCompletionResultSucceeded                     = 1;
}
message RunServerResponse {
	RunServerCompletionResult result = 1;
}

message UnityServer {
	int32 pid = 1; // Process id
	MatchConfiguration configuration = 2;
}

message User {
	repeated int32 servers = 1;
}